; ModuleID = '/home/carl/AnghaBench/nanomsg/src/aio/extr_fsm.c_nn_fsm_stopped.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/aio/extr_fsm.c_nn_fsm_stopped.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_fsm = type { i32, i32 }

@NN_FSM_STATE_STOPPING = common dso_local global i32 0, align 4
@NN_FSM_STATE_IDLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_fsm_stopped(%struct.nn_fsm* %0, i32 %1) #0 {
  %3 = alloca %struct.nn_fsm*, align 8
  %4 = alloca i32, align 4
  store %struct.nn_fsm* %0, %struct.nn_fsm** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.nn_fsm*, %struct.nn_fsm** %3, align 8
  %6 = load i32, i32* @NN_FSM_STATE_STOPPING, align 4
  %7 = call i32 @nn_assert_state(%struct.nn_fsm* %5, i32 %6)
  %8 = load %struct.nn_fsm*, %struct.nn_fsm** %3, align 8
  %9 = load %struct.nn_fsm*, %struct.nn_fsm** %3, align 8
  %10 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %9, i32 0, i32 1
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @nn_fsm_raise(%struct.nn_fsm* %8, i32* %10, i32 %11)
  %13 = load i32, i32* @NN_FSM_STATE_IDLE, align 4
  %14 = load %struct.nn_fsm*, %struct.nn_fsm** %3, align 8
  %15 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  ret void
}

declare dso_local i32 @nn_assert_state(%struct.nn_fsm*, i32) #1

declare dso_local i32 @nn_fsm_raise(%struct.nn_fsm*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
